# codelab

./: .hgignore  .hgtags  CONTRIBUTING.rst  Caddyfile  DEVELOPMENT.pt-BR.rst  DEVELOPMENT.rst  Dockerfile  Makefile  README.pt-BR.rst  README.rst  codelab.wsgi  docker-compose.test.yml  docker-compose.yml  gulpfile.js  package.json  prepare-development.sh  pyproject.toml  requirements.txt  server_app.py  similares.txt
.github/workflows/: continuous_integration.yml
app/: config.py  core.py  decorators.py  forms.py  mail_handler.py  projects.py  server.py  snippets.py  test_server.py
app/static/css/: styles.css
app/static/fonts/: icomoon.eot
app/static/js/: codebox.js  edit_pattern.js  editor.js  snippets.js
app/static/styles/: colors.styl  dialogs.styl  editor.styl  fonts.styl  headers_footers.styl  help.styl  main.styl  menus.styl  snippets.styl  spinners.styl  styles.styl  tables.styl
app/templates/: _form_helpers.html  base.html  dojo.html  faq.html  fill_project.html  footer.html  index.html  landing_page.html  privacy.html  snippets.html  terms_of_use.html
app/translations/: message.pot
backend/: .dockerignore  Dockerfile  Makefile  README.rst  hypercorn.toml  pyproject.toml  self-signed.crt  self-signed.key
backend/app/: __init__.py  codebox.py  config.py  main.py  models.py  projects.py  resources.py
backend/app/examples/: arguments_unpacking.py  arguments_unpacking.toml  array_indexes.py  array_indexes.toml  asyncio_gathering.toml  chaining_operators.toml  chaning_operators.py  decorators.py  decorators.toml  enumerate.py  enumerate.toml  fizzbuzz.py  fizzbuzz_technical_challenge.toml  generators.py  generators.toml  hello_world.cs  hello_world.toml  hello_world_c.toml_  hello_world_cpp.toml_  hello_world_rust.toml  memoize_decorator_factorial_combination_and_permutation.toml  memoize_factorial_combination_permutation.py  projects.json  reading_from_stdin_2.toml  reading_from_stdin_3.toml  sqlite_example.toml  unpacking_arguments.toml
backend/app/routers/: examples.py  playground.py  project.py  projects.py
backend/codelab/: config.py  main.py  resources.py
backend/codelab/examples/: arguments_unpacking.toml  array_indexes.toml  chaining_operators.toml  decorators.toml  enumerate.toml  fizz_buzz_matching_pattern.toml  fizzbuzz_technical_challenge.toml  hello_world.toml  memoize_decorator_factorial_combination_and_permutation.toml  ramos_nomeados.sh  reading_from_stdin_1.toml  sqlite.sql  unpacking_arguments.toml
backend/codelab/routers/: examples.py
backend/tests/: conftest.py  env  test_codebox.py  test_logging.py  test_models.py  test_project.py  test_projects.py
backend/tests/routers/: test_examples.py  test_playground.py  test_projects.py
codebox/: Dockerfile  Makefile  main.py  pyproject.toml
codebox/app/: codebox.py  models.py
codebox/tests/: test_codebox.py  test_container.py
doc/references/: ideias.rst
etc/redis/: redis.conf
etc/services.d/uwsgi/: run
etc/uwsgi/apps-enabled/: codelab.ini
frontend/: .dockerignore  .prettierrc  Dockerfile  README.rst  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  codelab.js  helpers.js  locale_messages.js  main.js  utils.js
frontend/src/assets/: base.styl  blackboard.css  fonts.css  github-theme.css  home.styl  main.styl  tailwind_preflight.styl  tool_tip.css
frontend/src/components/: AutoTextarea.vue  Footer.vue  Header.vue  codemirror.vue  project.vue
frontend/src/locales/: messages.js
frontend/src/plugins/: i18n.js  i18n_plugin.js
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: About.vue  Dojo.vue  Home.vue  terms_of_use.vue
references/: imitar.txt  similares
scripts/: install_hooks.sh
server/: Caddyfile  Dockerfile.caddy  config.py  docker-compose.dev.yml  docker-compose.yml  model.py  server.py  test_server.py  traducao.txt
server/static/css/: main.css  menus.css
server/static/fonts/: icomoon.eot
server/static/js/: codebox.js  editor.js
server/static/styles/: buttons.styl  color.styl  dialogs.styl  editor.styl  elf.styl  fonts.styl  help.styl  rupture  (+7 more)
server/templates/: _form_helpers.html  base.html  contact_form.html  dojo.html  faq.html  footer.html  index.html  landing_page.html  message_sent.html  terms_of_use.html
server/translations/: message.pot
(+3 files in other folders)
