[tool.poetry]
name = "codelab"
version = "0.1.0"
description = ""
authors = ["Andre Felipe Dias"]

[tool.poetry.dependencies]
Babel = "2.2.0"
blinker = "1.4"
chardet = "2.2.1"
colorama = "0.2.5"
Flask = "0.10.1"
Flask-Babel = "0.9"
Flask-Mail = "0.9.1"
Flask-Moment = "0.5.1"
Flask-Script = "2.0.5"
Flask-WTF = "0.12"
hiredis = "0.2.0"
html5lib = "0.999"
itsdangerous = "0.24"
Jinja2 = "2.8"
MarkupSafe = "0.23"
Pygments = "2.1.3"
pytz = "2016.2"
redis = "2.10.5"
requests = "2.2.1"
six = "1.5.2"
speaklater = "1.3"
urllib3 = "1.7.1"
Werkzeug = "0.11.5"
wheel = "0.24.0"
WTForms = "2.1"


[tool.poetry.dev-dependencies]
yapf = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
