[tool.poetry]
name = "Codelab"
version = "0.1.0"
description = ""
authors = ["André Felipe Dias <andref.dias@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
aiofiles = "*"
aioredis = "*"
fastapi = "*"
httpx = "*"
Hypercorn = "*"
loguru = "*"
orjson = "*"
python = "^3.10"
python-dotenv = "*"
tenacity = "*"
uvloop = "*"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]
alt-pytest-asyncio = "*"
asgi-lifespan = "*"
bandit = "*"
flake8 = "*"
flake8-debugger = "*"
flake8-pytest-style = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pip-audit = "*"
pytest = "*"
pytest-cov = "*"
pyupgrade = "*"
types-toml = "*"

[tool.isort]
profile = "black"
line_length = 100

[tool.blue]
line-length = 100

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
