[tool.poetry]
name = "Codelab"
version = "0.1.0"
description = ""
authors = ["André Felipe Dias <andref.dias@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
fastapi = "*"
httpx = "*"
hypercorn = "*"
loguru = "*"
orjson = "*"
pygments = "*"
python = "^3.11.4"
python-dotenv = "*"
redis = { version = "*", extras = ["hiredis"] }
stackprinter = "*"
tenacity = "*"
uvloop = "*"
tomli = "*"


[tool.poetry.group.dev.dependencies]
asgi-lifespan = "*"
alt-pytest-asyncio = "*"
httpx = { version = "*", extras = ["cli"] }
mypy = "*"
pip-audit = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"
types-redis = "*"


[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
default_async_timeout = 600

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "ARG",
    "B",
    "C4",
    "E",
    "ERA",
    "F",
    "I",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RET",
    "S",
    "T10",
    "T10",
    "UP",
    "W",
]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ARG", "PLR2004", "S"]
"smoke_test.py" = ["S"]
